--- a/GlucoMan.Maui/App.xaml
+++ b/GlucoMan.Maui/App.xaml
@@ -2,16 +2,28 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
              xmlns:local="clr-namespace:GlucoMan.Maui"  
-             x:Class="GlucoMan.Maui.App">  
-    <Application.Resources>  
-        <ResourceDictionary>  
-            <Style TargetType="Button">  
-                <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />  
-                <Setter Property="TextColor" Value="White" />  
-            </Style>  
+             x:Class="GlucoMan.Maui.App">
+    <Application.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Label">
+                <Setter Property="TextColor" Value="Black" />
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="TextColor" Value="Black" />
+            </Style>
+            <Style TargetType="Entry">
+                <Setter Property="TextColor" Value="Black" />
+            </Style>
+            <Style TargetType="DatePicker">
+                <Setter Property="TextColor" Value="Black" />
+            </Style>
+            <Style TargetType="TimePicker">
+                <Setter Property="TextColor" Value="Black" />
+            </Style>
             <ResourceDictionary.MergedDictionaries>  
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />  
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />  
+                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>  
         </ResourceDictionary>  
     </Application.Resources>  
