--- a/GlucoMan.Maui/ClickableImagePage.xaml
+++ b/GlucoMan.Maui/ClickableImagePage.xaml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:GlucoMan.Maui"
              x:Class="GlucoMan.Maui.ClickableImagePage"
              Title="ClickableImagePage">
     <VerticalStackLayout>
         <HorizontalStackLayout>
-            <Button x:Name="btnSaveInjection" Text="Save" 
-                    ToolTipProperties.Text="Saves the injection point"
-                    Clicked="BtnSaveInjection_Clicked"/>
+            <Button x:Name="btnSavePosition" Text="Keep" 
+                    ToolTipProperties.Text="Closes the page remembering the current position, that can be saved in the other page"
+                    Clicked="BtnSavePosition_Clicked"/>
+            <Button x:Name="btnForgetPosition" Text="Forget" 
+                    ToolTipProperties.Text="Closes the page forgetting the current position"
+                    Clicked="BtnForgetPosition_Clicked"/>
             <CheckBox x:Name="EditorCheckBox" Margin="0" HorizontalOptions="Start" 
                         ToolTipProperties.Text="Edits the reference points if checked"
                         CheckedChanged="CheckedChanged"/>
@@ -38,10 +42,10 @@
                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
                 </Image.GestureRecognizers>
             </Image>
-            <!-- GraphicsView con le stesse dimensioni dell'immagine in griglia 
-            (è nella stessa cella così si sovrappongono. 
-            L'immagine sta sotto ed il GraphicsView sopra
-            (così si vedono i cerchi che vengono disegnati)) -->
+            <!--GraphicsView with the same size as the image in the grid 
+                (it is in the same cell so they overlap.
+                The image is below and the GraphicsView is above
+                (so you can see the circles that are drawn)) -->
             <GraphicsView x:Name="cerchiGraphicsView"
                     Drawable="{StaticResource drawable}">
                 <GraphicsView.GestureRecognizers>
