--- a/GlucoMan.Maui/App.xaml
+++ b/GlucoMan.Maui/App.xaml
@@ -5,14 +5,14 @@
              x:Class="GlucoMan.Maui.App">
     <Application.Resources>
         <ResourceDictionary>
-            <Style TargetType="Label">
+            <!--<Style TargetType="Label">
                 <Setter Property="TextColor" Value="Black" />
-            </Style>
-            <Style TargetType="Button">
+            </Style>-->
+            <!--<Style TargetType="Button">
                 <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
                 <Setter Property="TextColor" Value="Black" />
-            </Style>
-            <Style TargetType="Entry">
+            </Style>-->
+            <!--<Style TargetType="Entry">
                 <Setter Property="TextColor" Value="Black" />
             </Style>
             <Style TargetType="DatePicker">
@@ -20,7 +20,7 @@
             </Style>
             <Style TargetType="TimePicker">
                 <Setter Property="TextColor" Value="Black" />
-            </Style>
+            </Style>-->
             <ResourceDictionary.MergedDictionaries>  
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />  
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
